# reference_integration

./: .bazelignore  .bazelrc  .bazelrc.baselibs  .devcontainer.json  .gitignore  .pre-commit-config.yaml  BUILD  MODULE.bazel  README.md  baselibs.bazelrc  build_config.json  communication.bazelrc  full_docs.bzl  git_override.MODULE.bazel  integration_test.sh  known_good.json  known_good.updated.json  known_good_next.json  pyproject.toml  score_modules.MODULE.bazel  score_starter  score_toolchains.MODULE.bazel  user.bazelrc  versions.json
.devcontainer/: devcontainer.json  prepare_workspace.sh
.github/: CODEOWNERS
autosd/: MODULE.bazel  score_toolchains.MODULE.bazel
bazel_common/: bundlers.bzl  score_basic_bazel.MODULE.bazel  score_gcc_toolchains.MODULE.bazel  score_images.MODULE.bazel  score_llvm_libclang.MODULE.bazel  score_modules_target_sw.MODULE.bazel  score_modules_tooling.MODULE.bazel  score_python.MODULE.bazel  score_qnx_toolchains.MODULE.bazel  score_rust_toolchains.MODULE.bazel
ci/: showcase_targets_run.txt
docs/: code_quality.rst  conf.py  feature_and_process_status.rst  how_to_release.rst  index.rst  needs_filters.py  process_methods_tools.rst  process_tools.rst  release_notes.rst  status_roadmap.rst  sw_components.rst
ebclfsa/: .bazelrc  MODULE.bazel  README.md
ebclfsa/example/ipc_bridge/: BUILD  main.cpp
ebclfsa/example/ipc_bridge_hi_wrapper/: BUILD  logging.json  main.cc  run_qemu.sh
ebclfsa/patches/: fix_hard_coded_amd64.patch
ebclfsa/persistency_integration/: BUILD  run_qemu.sh
ebclfsa/scrample_integration/: BUILD  run_qemu.sh
feature_integration_tests/: LIFECYCLE_TESTS_SUMMARY.md  README.md  README_FIT_LIFECYCLE.md
feature_integration_tests/rust_test_scenarios/: BUILD  Cargo.toml  Dockerfile
feature_integration_tests/rust_test_scenarios/src/: main.rs
feature_integration_tests/rust_test_scenarios/src/internals/: runtime_helper.rs
feature_integration_tests/rust_test_scenarios/src/scenarios/: mod.rs
feature_integration_tests/rust_test_scenarios/src/scenarios/basic/: basic.rs  mod.rs  orchestration_with_persistency.rs
feature_integration_tests/rust_test_scenarios/src/tests/: mod.rs
feature_integration_tests/rust_test_scenarios/src/tests/basic/: mod.rs  only_shutdown_sequence.rs
feature_integration_tests/rust_test_scenarios/test_data/: kvs_0_default.json
feature_showcase/: BUILD
images/: .bazelrc  score.sh
integration/: .bazelrc  MODULE.bazel  score_starter
integration/bazel_common/: bundlers.bzl  score_basic_bazel.MODULE.bazel  score_basic_tools.MODULE.bazel  score_gcc_toolchains.MODULE.bazel  score_modules.MODULE.bazel  score_modules_target_sw.MODULE.bazel  score_modules_tooling.MODULE.bazel
main/: genindex.html  index.html  needs.json  schema_violations.json  search.html  searchindex.js  status_dashboard.html
pr-100/: needs.json  schema_violations.json
pr-101/: genindex.html  index.html  needs.json  objects.inv  schema_violations.json  search.html  searchindex.js
pr-102/: genindex.html  needs.json  schema_violations.json
pr-103/: needs.json  schema_violations.json  searchindex.js
pr-104/: needs.json  schema_violations.json
pr-105/: index.html  needs.json  schema_violations.json
pr-106/: needs.json  schema_violations.json  searchindex.js
pr-107/: index.html  needs.json  schema_violations.json  status_dashboard.html
pr-108/: needs.json  schema_violations.json  searchindex.js
pr-114/: needs.json  schema_violations.json  search.html  searchindex.js
pr-116/: genindex.html  needs.json  schema_violations.json  searchindex.js  status_dashboard.html
pr-118/: index.html  needs.json  objects.inv  schema_violations.json  searchindex.js
pr-119/: needs.json  schema_violations.json  searchindex.js
pr-120/: needs.json  schema_violations.json  searchindex.js
pr-160/: needs.json  schema_violations.json
pr-163/: needs.json  schema_violations.json  searchindex.js
pr-164/: genindex.html  index.html  needs.json  schema_violations.json
pr-165/: needs.json  schema_violations.json  search.html
pr-167/: needs.json  schema_violations.json
pr-168/: genindex.html  how_to_release.html  index.html  needs.json  objects.inv  schema_violations.json  search.html  searchindex.js
pr-169/: needs.json  schema_violations.json
pr-170/: needs.json  schema_violations.json  searchindex.js
pr-172/: needs.json  schema_violations.json
pr-173/: needs.json  schema_violations.json
pr-174/: needs.json
pr-175/: needs.json  schema_violations.json
pr-176/: needs.json  schema_violations.json
pr-177/: needs.json  schema_violations.json  search.html
pr-178/: needs.json  schema_violations.json
pr-179/: needs.json  schema_violations.json  searchindex.js
pr-180/: needs.json  schema_violations.json  searchindex.js
pr-181/: needs.json  schema_violations.json  status_dashboard.html
pr-182/: needs.json  schema_violations.json
pr-183/: index.html  needs.json  schema_violations.json  searchindex.js  status_dashboard.html
pr-184/: needs.json  schema_violations.json
pr-185/: index.html  needs.json  schema_violations.json  searchindex.js  status_dashboard.html
pr-186/: needs.json  schema_violations.json
pr-187/: genindex.html  needs.json  schema_violations.json  status_dashboard.html
pr-188/: needs.json  schema_violations.json
pr-189/: needs.json  schema_violations.json  searchindex.js  status_dashboard.html
pr-190/: needs.json  schema_violations.json  status_dashboard.html
pr-191/: needs.json  schema_violations.json  searchindex.js  status_dashboard.html
pr-192/: needs.json  (+2 more)
qnx_qemu/: .bazelrc  BUILD  MODULE.bazel  README.md
qnx_qemu/configs/: network_setup_dhcp.sh  startup.sh
qnx_qemu/datarouter_integration/: BUILD
qnx_qemu/datarouter_integration/etc/: log-channels.json  logging.json
qnx_qemu/lifecycle_integration/: BUILD  hm_demo.json  lm_demo.json  start.sh
qnx_qemu/scrample_integration/: BUILD
qnx_qemu/scripts/: run_qemu.sh
qnx_qemu/test/: README.md  test_qnx_qemu.sh  test_qnx_qemu_bridge.sh  test_qnx_qemu_portforward.sh
qnx_qemu/test/itf/: test_lifecycle.py  test_scrample.py
(+90016 files in other folders)
