# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

bazel_dep(name = "score_baselibs")
single_version_override(
    module_name = "score_baselibs",
    version = "0.1.3",
)

bazel_dep(name = "score_communication")
single_version_override(
    module_name = "score_communication",
    version = "0.1.1",
)

bazel_dep(name = "score_persistency")
git_override(
    module_name = "score_persistency",
    remote = "https://github.com/qorix-group/persistency.git",
    commit = "06e3a5ae37822f9cbaa5b3ce1d1ccdc40df2e6e5",
)

bazel_dep(name = "score_orchestrator")
git_override(
    module_name = "score_orchestrator",
    remote = "https://github.com/eclipse-score/orchestrator.git",
    commit = "df64cda1e129aa259d8be7bbb8af50f852748301",
)

bazel_dep(name = "score_kyron")
git_override(
    module_name = "score_kyron",
    remote = "https://github.com/eclipse-score/kyron.git",
    commit = "b835cbb7d5e724b6c2b892997b6319766aff84b2",
)

bazel_dep(name = "score_tooling")
single_version_override(
    module_name = "score_tooling",
    version = "1.0.2",
)

bazel_dep(name = "score_platform")
git_override(
    module_name = "score_platform",
    remote = "https://github.com/qorix-group/score.git",
    commit = "e7707ffe06f4cc870ec8ce7bd82a3ab9af78368e",
)

bazel_dep(name = "score_bazel_platforms")
single_version_override(
    module_name = "score_bazel_platforms",
    version = "0.0.2",
)

bazel_dep(name = "score_test_scenarios")
single_version_override(
    module_name = "score_test_scenarios",
    version = "0.3.0",
)

bazel_dep(name = "score_docs_as_code")
single_version_override(
    module_name = "score_docs_as_code",
    version = "2.2.0",
)

bazel_dep(name = "score_process")
single_version_override(
    module_name = "score_process",
    version = "1.3.2",
)

bazel_dep(name = "score_feo", version = "1.0.2")
single_version_override(
    module_name = "score_feo",
    version = "1.0.2",
)
