# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

bazel_dep(name = "score_baselibs")
single_version_override(
    module_name = "score_baselibs",
    version = "0.2.2" 
)

bazel_dep(name = "score_communication")
single_version_override(
    module_name = "score_communication",
    version = "0.1.2",
)

bazel_dep(name = "score_logging")
single_version_override(
    module_name = "score_logging",
    version = "0.0.4",
)

bazel_dep(name = "score_persistency")
git_override(
    module_name = "score_persistency",
    remote = "https://github.com/qorix-group/persistency.git",
    commit = "49089f1ac9d232f09eb65ca086b92f67e75aaff8",
)

bazel_dep(name = "score_orchestrator")
single_version_override(
    module_name = "score_orchestrator",
    version = "0.0.4",
)

bazel_dep(name = "score_kyron")
single_version_override(
    module_name = "score_kyron",
    version = "0.0.3",
)

bazel_dep(name = "score_tooling")
single_version_override(
    module_name = "score_tooling",
    version = "1.0.2",
)

bazel_dep(name = "score_platform")
git_override(
    module_name = "score_platform",
    remote = "https://github.com/eclipse-score/score.git",
    commit = "45faa6781b5c7d292d885d4e2ad95eaf21c925c5",
)

bazel_dep(name = "score_bazel_platforms")
single_version_override(
    module_name = "score_bazel_platforms",
    version = "0.0.3",
)

bazel_dep(name = "score_test_scenarios")
single_version_override(
    module_name = "score_test_scenarios",
    version = "0.3.1",
)

bazel_dep(name = "score_docs_as_code")
single_version_override(
    module_name = "score_docs_as_code",
    version = "2.2.0",
)

bazel_dep(name = "score_process")
single_version_override(
    module_name = "score_process",
    version = "1.4.0",
)

bazel_dep(name = "score_feo", version = "1.0.2")
single_version_override(
    module_name = "score_feo",
    version = "1.0.2",
)

bazel_dep(name = "nlohmann_json", version = "3.11.3")
