# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

bazel_dep(name = "score_bazel_cpp_toolchains", version = "0.2.2")
git_override(
    module_name = "score_bazel_cpp_toolchains",
    commit = "1a713b6d95d5f61468836b34e7eb64c83ddd658e",  # EBcLfSA toolchain update + LD_LIBRARY_PATH fix
    remote = "https://github.com/elektrobit-contrib/eclipse-score_bazel_cpp_toolchains.git",
)

gcc = use_extension("@score_bazel_cpp_toolchains//extensions:gcc.bzl", "gcc", dev_dependency = True)
gcc.toolchain(
    name = "score_gcc_x86_64_toolchain",
    target_cpu = "x86_64",
    target_os = "linux",
    use_default_package = True,
    version = "12.2.0",
)
gcc.toolchain(
    name = "score_ebclfsa_toolchain",
    runtime_ecosystem = "ebclfsa",
    sdk_version = "0.1.0",
    target_cpu = "aarch64",
    target_os = "linux",
    use_default_package = True,
)

bazel_dep(name = "os_autosd_toolchain", version = "0.0.1")

# override with git
git_override(
    module_name = "os_autosd_toolchain",
    branch = "main",
    remote = "https://github.com/eclipse-score/inc_os_autosd.git",
    strip_prefix = "toolchain",
)

autosd_10_gcc = use_extension("@os_autosd_toolchain//autosd_10_gcc:extensions.bzl", "autosd_10_gcc_extension")
use_repo(autosd_10_gcc, "autosd_10_gcc_repo")

# Register the RPM toolchain
rpm_toolchain = use_extension("@rules_rpm//toolchain:extensions.bzl", "rpm_toolchain")
use_repo(rpm_toolchain, "rpm_toolchain")

use_repo(
    gcc,
    "score_ebclfsa_toolchain",
    "score_gcc_x86_64_toolchain",
)
