# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
bazel_dep(name = "rules_oci", version = "2.3.1")
git_override(
    module_name = "rules_oci",
    remote = "https://github.com/bazel-contrib/rules_oci.git",
    tag = "v2.3.1",
)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "ubuntu_22_04",
    digest = "sha256:3ba65aa20f86a0fad9df2b2c259c613df006b2e6d0bfcc8a146afb8c525a9751",
    image = "ubuntu",
    platforms = ["linux/amd64"],
    tag = "22.04",
)
oci.pull(
    name = "eclipse_autosd10_qemu_amd64",
    digest = "sha256:137551aa303c2f53a4423f06f805e546e07060ecac41b139f4f43c204787f713",
    image = "ghcr.io/eclipse-autosd/eclipse-autosd-bootc-qemu",
    platforms = ["linux/amd64"],
    tag = "latest",
)
use_repo(
    oci,
    "eclipse_autosd10_qemu_amd64",
    "eclipse_autosd10_qemu_amd64_linux_amd64",
    "ubuntu_22_04",
    "ubuntu_22_04_linux_amd64",
)

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "eb_corbos_toolkit_fastdev_archive",
    sha256 = "9ca3891b27e4b7bbf6c519d8924283e89c03b62513a988f751a3ee3d10c293e4",
    url = "https://github.com/Elektrobit/eb_corbos_toolkit/releases/download/v2.0.0-beta1/fastdev-ubuntu-ebclfsa-ebcl-qemuarm64.tar.gz",
)

bazel_dep(name = "score_rules_imagefs", version = "0.0.1")

# Pin score_rules_imagefs to 0.0.1. The bumped score_communication pulls in
# score_qnx_unit_tests@0.2.0 which requests score_rules_imagefs@0.0.3, but 0.0.3
# drops the `ext_repo_maping` attribute used by our QNX image build files. Force
# 0.0.1 so the reference integration image definitions keep working without a
# larger image-definition migration.
single_version_override(
    module_name = "score_rules_imagefs",
    version = "0.0.1",
)

imagefs = use_extension("@score_rules_imagefs//extensions:imagefs.bzl", "imagefs", dev_dependency = True)
imagefs.toolchain(
    name = "score_qnx_x86_64_ifs_toolchain",
    sdp_to_import = "@score_qcc_x86_64_toolchain_pkg",
    sdp_version = "8.0.0",
    target_cpu = "x86_64",
    target_os = "qnx",
    type = "ifs",
)
imagefs.toolchain(
    name = "score_qnx_aarch64_ifs_toolchain",
    sdp_to_import = "@score_qcc_aarch64_toolchain_pkg",
    sdp_version = "8.0.0",
    target_cpu = "aarch64",
    target_os = "qnx",
    type = "ifs",
)
use_repo(
    imagefs,
    "score_qnx_aarch64_ifs_toolchain",
    "score_qnx_x86_64_ifs_toolchain",
)
